--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="home">
 
-<div class="home_background" style="background-image:url(images/_ilovejlu.png)"></div>
+<div class="home_background" style="background-image:url(images/_ilovejlu.jpg)"></div>
 <div class="container">
 <div class="row">
 <div class="col">
