--- a/research.html
+++ b/research.html
@@ -199,7 +199,7 @@ Satisfying individual user is critical for user-interactive computing systems, s
 </div>
 
 
-<div class="col-lg-3 footer_col">
+<div class="col-lg-7 footer_col">
 <div class="footer_col_title">contact info</div>
 <ul class="contact_info_list">
 <li class="contact_info_item d-flex flex-row">
@@ -208,7 +208,7 @@ Satisfying individual user is critical for user-interactive computing systems, s
 </li>
 <li class="contact_info_item d-flex flex-row">
 <div><div class="contact_info_icon"><img src="images/phone-call.svg" alt=""></div></div>
-<div class="contact_info_text">No available</div>
+<div class="contact_info_text">Not available</div>
 </li>
 <li class="contact_info_item d-flex flex-row">
 <div><div class="contact_info_icon"><img src="images/planet-earth.svg" alt=""></div></div>
