--- a/publication.html
+++ b/publication.html
@@ -16,7 +16,7 @@
 
 <div class="home">
 
-<div class="home_background" style="background-image:url(images/_ilovejlu.png)"></div>
+<div class="home_background" style="background-image:url(images/ilovejlu.jpg)"></div>
 <div class="container">
 <div class="row">
 <div class="col">
@@ -169,7 +169,7 @@
 </div>
 
 
-<div class="col-lg-3 footer_col">
+<div class="col-lg-7 footer_col">
 <div class="footer_col_title">contact info</div>
 <ul class="contact_info_list">
 <li class="contact_info_item d-flex flex-row">
@@ -178,7 +178,7 @@
 </li>
 <li class="contact_info_item d-flex flex-row">
 <div><div class="contact_info_icon"><img src="images/phone-call.svg" alt=""></div></div>
-<div class="contact_info_text">No available</div>
+<div class="contact_info_text">Not available</div>
 </li>
 <li class="contact_info_item d-flex flex-row">
 <div><div class="contact_info_icon"><img src="images/planet-earth.svg" alt=""></div></div>
