--- a/publication_chinese.html
+++ b/publication_chinese.html
@@ -16,7 +16,7 @@
 
 <div class="home">
 
-<div class="home_background" style="background-image:url(images/_ilovejlu.png)"></div>
+<div class="home_background" style="background-image:url(images/ilovejlu.jpg)"></div>
 <div class="container">
 <div class="row">
 <div class="col">
@@ -169,7 +169,7 @@
 </div>
 
 
-<div class="col-lg-3 footer_col">
+<div class="col-lg-7 footer_col">
 <div class="footer_col_title">联系方式</div>
 <ul class="contact_info_list">
 <li class="contact_info_item d-flex flex-row">
