--- a/research_chinese.html
+++ b/research_chinese.html
@@ -16,7 +16,7 @@
 
 <div class="home">
 
-<div class="home_background" style="background-image:url(images/_ilovejlu.png)"></div>
+<div class="home_background" style="background-image:url(images/ilovejlu.jpg)"></div>
 <div class="container">
 <div class="row">
 <div class="col">
@@ -197,7 +197,7 @@ GPU被广泛用于AR/VR等新型应用，而这些应用对于性能和能耗有
 </div>
 
 
-<div class="col-lg-3 footer_col">
+<div class="col-lg-7 footer_col">
 <div class="footer_col_title">联系方式</div>
 <ul class="contact_info_list">
 <li class="contact_info_item d-flex flex-row">
