--- a/team.html
+++ b/team.html
@@ -263,7 +263,7 @@
 <div class="row">
 <div class="col">
 <div class="section_title text-center">
-<h3>Alumini</h3>
+<h3>Alumni</h3>
 </div>
 </div>
 </div>
