--- a/team.html
+++ b/team.html
@@ -285,6 +285,7 @@
 <div class="agent_name"><font style="font-size: 24px;">Liqi Ping</font></div>
 <div class="agent_role"><font style="font-size: 18px;">Master in Computer Science, 2018.08 - 2021.08</font></div>
 <div class="agent_role"><font style="font-size: 18px;">Thesis: Soft Error Reliability Analysis and Improvement for Convolutional Neural Network (<a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CMFD&dbname=CMFD202201&filename=1021094396.nh&uniplatform=NZKPT&v=hMgUkC3P56N6L0L6oClH1SUieAfd8IuvK_hzKGFuhmxNb4nr0VILsr_5r5tnRsYz">link</a>)</font></div>
+<div class="agent_role"><font style="font-size: 18px;">Publication: GLSVLSI'20</font></div>
 <div class="agent_role"><font style="font-size: 18px;">First employment: Harbin Electric Corporation, Harbin, smart grid engineer</font></div>
 </div>
 </div>
