--- a/team_chinese.html
+++ b/team_chinese.html
@@ -295,6 +295,7 @@
 <div class="agent_role"><font style="font-size: 18px;">硕士，2018.08 - 2021.08</font></div>
 <div class="agent_role"><font style="font-size: 18px;">计算机科学与技术专业</font></div>
 <div class="agent_role"><font style="font-size: 18px;">论文题目: 面向卷积神经网络的软错误可靠性分析及提升研究 (<a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CMFD&dbname=CMFD202201&filename=1021094396.nh&uniplatform=NZKPT&v=hMgUkC3P56N6L0L6oClH1SUieAfd8IuvK_hzKGFuhmxNb4nr0VILsr_5r5tnRsYz">link</a>)</font></div>
+<div class="agent_role"><font style="font-size: 18px;">论文发表: GLSVLSI'20</font></div>
 <div class="agent_role"><font style="font-size: 18px;">首次就业: 哈电集团, 哈尔滨, 智能电网工程师</font></div>
 </div>
 </div>
